Fixed whitespace issue between skills and projects sections

--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,3 +1,8 @@
+.skills
+{
+    padding-bottom: 2rem;
+}
+
 .intro
 {
     font-size: 1.2rem;
